--- a/html/index.html
+++ b/html/index.html
@@ -102,7 +102,7 @@
 					<a href="factory.html">工厂</a>
 				</li>
 				<li style="position: relative;top: 20px;left:350px;">
-					<img src="../img/logo.jpg" style="width: 100px">
+					<img src="../img/logo.jpg" style="width: 100px" onclick="toIndex()">
 				</li>
 				<li style="position: relative;left:600px;">
 					<a href="#">登入</a>
@@ -119,26 +119,37 @@
 </div>
 <div style="width: 100%;height: 2000px;margin-top: 10px；">
 	<div style="width: 90%;height: 1200px;margin-top:20px;margin:0 auto;">
+		<div style="width: 90%;height: 50px;margin:0 auto；line-height:50px;">
+			<span style="display: block;text-align: center;color: black">基本款</span>
+		</div>
 		<div style="width: 80%;height: 1198px;margin:0 auto;background-image: url(../img/pic2.jpg);background-size: 100% 100%">
 			    <div style="position: relative;top: 80%;text-align: center;">
 			        <a style="padding: 10px 35px;background-color: #f1efef;color: black;cursor: pointer;" href="cloth.html">购买</a>
 			    </div>
 		</div>
 	</div>
-	<div style="width: 90%;height: 50px;margin:0 auto">
-		<span style="display: block;text-align: center;color: black">基本款</span>
-	</div>
-	<div style="width: 90%;height: 610px;margin:0 auto;">
+
+	<div style="width: 90%;height: 610px;margin:60px auto;">
+		<div style="width: 90%;height: 50px;margin:0 autoline-height:50px;">
+			<span style="display: block;text-align: center;color: black">当季新品</span>
+		</div>
 		<div style="width: 80%;height: 600px;margin:0 auto;background-image: url(../img/pic1.jpg);background-size: 100% 100%">
 			    <div style="position: relative;top: 75%;text-align: center;">
 			        <a style="padding: 10px 35px;background-color: #f1efef;color: black;cursor: pointer;">购买</a>
 			    </div>
 		</div>
 	</div>
-	<div style="width: 90%;height: 50px;margin:0 auto">
-		<span style="display: block;text-align: center;color: black">当季新品</span>
-	</div>
-	<div style="width: 80%;height: 400px;margin-top:20px;margin: 0 auto">
+
+	<div style="width: 80%;height: 420px;margin-top:20px;margin: 0 auto">
+		<div style="width: 32%;height: 50px;float: left;line-height:50px;">
+    		<span style="display: block;text-align: center;color: black">女装</span>
+		</div>
+		<div style="width: 32%;height: 50px;float: left;line-height:50px;">
+		  	 <span style="display: block;text-align: center;color: black;margin-left: 10px;">男装</span>
+		</div>
+		<div style="width: 32%;height: 50px;float: left;line-height:50px;">
+	    	 <span style="display: block;text-align: center;color: black;margin-left: 10px;">童装</span>
+		</div>
 		<div style="width: 32%;height: 380px;background-image: url(../img/women.png);float: left;background-size: 100% 100%">
 			    <div style="position: relative;top: 80%;left: 40%;">
 			        <a style="padding: 10px 35px;background-color: #f1efef;color: black;cursor: pointer;">购买</a>
@@ -155,15 +166,7 @@
 			    </div>
 		</div>
 
-		<div style="width: 32%;height: 50px;float: left;">
-	    		<span style="display: block;text-align: center;color: black">女装</span>
-		</div>
-		<div style="width: 32%;height: 50px;float: left;">
-			   <span style="display: block;text-align: center;color: black;margin-left: 10px;">男装</span>
-		</div>
-		<div style="width: 32%;height: 50px;float: left;">
-			    <span style="display: block;text-align: center;color: black;margin-left: 10px;">童装</span>
-		</div>
+
 	</div>
 	<div class="foot_content" style="width: 100%;height: 300px;margin-top:20px;">
 	    <div class="foot_clumn">
