--- a/html/shop.html
+++ b/html/shop.html
@@ -102,7 +102,7 @@
 					<a href="factory.html">工厂</a>
 				</li>
 				<li style="position: relative;top: 20px;left:350px;">
-					<img src="../img/logo.jpg" style="width: 100px">
+					<img src="../img/logo.jpg" style="width: 100px" onclick="toIndex()">
 				</li>
 				<li style="position: relative;left:600px;">
 					<a href="#">登入</a>
@@ -118,13 +118,21 @@
 	</div>
 </div>
 <div style="width: 100%;height: 1600px;margin-top: 10px；">
+	<div>
+		<div class="searchBlock" style="float: right;margin-right: 20px;">
+	    	<input type="button" class="searchBtn" style="outline: none;">
+		    <span>  
+        		<input type="text" id="search" name="search" class="searchText" placeholder="查询门店">  
+	    	</span>  
+		</div>
+	</div>
 	<div style="width: 80%;height: 900px;margin-top:20px;margin:0 auto;">
-		<div style="width: 80%;height: 900px;margin:0 auto;">
-			<img src="../img/店铺.jpg" style="width: 100%;height: 100%;">
+		<div style="width: 50%;height: 900px;margin:0 auto;">
+			<img src="../img/店铺1.jpg" style="width: 100%;height: 100%;">
 		</div>
 	</div>
 	<div style="width: 80%;height: 610px;margin:0 auto;margin-top: 20px;">
-		<div style="width: 80%;height: 600px;margin:0 auto;">
+		<div style="width: 50%;height: 600px;margin:0 auto;">
 			<img src="../img/店铺2.jpg" style="width: 100%;height: 100%;">
 		</div>
 	</div>
