--- a/html/cloth.html
+++ b/html/cloth.html
@@ -102,7 +102,7 @@
 					<a href="factory.html">工厂</a>
 				</li>
 				<li style="position: relative;top: 20px;left:350px;">
-					<img src="../img/logo.jpg" style="width: 100px">
+					<img src="../img/logo.jpg" style="width: 100px" onclick="toIndex()">
 				</li>
 				<li style="position: relative;left:600px;">
 					<a href="#">登入</a>
@@ -118,9 +118,9 @@
 	</div>
 </div>
 <div style="width: 100%;height: 800px;margin-top: 10px；">
-	<div style="width: 100%;height: 500px;margin-top:20px;">
-		<div style="width: 28%;height: 500px;float: left;margin-left: 20px;">
-			<div style="width: 100%;height: 380px;"">
+	<div style="width: 100%;height: 600px;margin-top:20px;">
+		<div style="width: 28%;height: 600px;float: left;margin-left: 50px;">
+			<div style="width: 100%;height: 500px;"">
 				<img src="../img/纯色基础.jpg" style="width: 100%;height: 100%;">
 			</div>
 			<div style="width: 100%;height: 30px;">
@@ -138,8 +138,8 @@
 				</div>
 			</div>
 		</div>
-		<div style="width: 28%;height: 460px;float: left;margin-left: 20px;">
-			<div style="width: 100%;height: 380px;"">
+		<div style="width: 28%;height: 600px;float: left;margin-left: 50px;">
+			<div style="width: 100%;height: 500px;"">
 				<img src="../img/条纹.jpg" style="width: 100%;height: 100%;">
 			</div>
 			<div style="width: 100%;height: 30px;">
