--- a/html/factory.html
+++ b/html/factory.html
@@ -102,7 +102,7 @@
 					<a href="factory.html">工厂</a>
 				</li>
 				<li style="position: relative;top: 20px;left:350px;">
-					<img src="../img/logo.jpg" style="width: 100px">
+					<img src="../img/logo.jpg" style="width: 100px" onclick="toIndex()">
 				</li>
 				<li style="position: relative;left:600px;">
 					<a href="#">登入</a>
@@ -135,7 +135,7 @@
 	</div>
 	<div style="width: 90%;height: 700px;margin-top:20px;margin:0 auto;margin-top: 20px;">
 		<div style="width: 70%;height: 700px;margin:0 auto;">
-			<img src="../img/工厂4.jpeg" style="width: 100%;height: 100%;">
+			<img src="../img/工厂4.jpg" style="width: 100%;height: 100%;">
 		</div>
 	</div>
 	</div>
